# TradingEngineBridge

./: .gitignore  CMakeLists.txt  README.md  config.example.ini  kissnet.hpp  run.sh
databaseManager/: CMakeLists.txt  make.sh
databaseManager/include/: ConfigurationMaster.hpp  DbStructs.hpp  PostgresDBManager.hpp  json.hpp
databaseManager/source/: ConfigurationMaster.cpp  PostgresDBManager.cpp
examples/: tradingview_alert.json
gmDatabaseManager/: CMakeLists.txt  make.sh
gmDatabaseManager/SQLAPI_new/: ReadMe.txt
gmDatabaseManager/include/: SQLAPI.h  gmConfigurationMaster.hpp
gmDatabaseManager/source/: gmConfigurationMaster.cpp
include/: ConfigParser.hpp  JsonHandler.hpp  Logger.h  RequestHandler.hpp  SymbolConverter.hpp  TcpClient.hpp  TradingViewPacket.hpp  WebServer.hpp
src/: ConfigParser.cpp  JsonHandler.cpp  Logger.cpp  RequestHandler.cpp  SymbolConverter.cpp  TcpClient.cpp  WebServer.cpp  main.cpp
